# gw2fashionista

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  gw2fashionista-py  gw2fashionista-rs  pyproject.toml  test_cli_compare.sh  test_cli_python.sh  test_cli_rust.sh
.github/workflows/: ci.yaml  create-release.yaml  release-cli.yaml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: args.rs  mod.rs  read.rs  wardrobe_export.rs  wardrobe_filter.rs  wardrobe_merge.rs
cli/src/commands/travel/: args.rs  filter.rs  merge.rs  mod.rs
cli/src/commands/wardrobe/: args.rs  export.rs  filter.rs  merge.rs  mod.rs
core/: Cargo.toml
core/data/names/: doorways.toml  gliders.toml  mounts.toml  outfits.toml  skiffs.toml  skins.toml
core/src/: lib.rs
core/src/domain/: chatlink.rs  mod.rs  skins.rs
core/src/domain/templates/: mod.rs  travel.rs  wardrobe.rs
core/src/domain/templates/wardrobe/: mod.rs  slot.rs
core/src/domain/wardrobe_template/: mod.rs  slot.rs
core/src/gw2/: cache.rs  doorway.rs  equipment.rs  error.rs  fetch.rs  import.rs  lookup.rs  missing.rs  mod.rs  named.rs  outfit.rs  resolve.rs  retry.rs  static_names.rs
core/src/gw2/endpoints/: mod.rs  mount.rs  skiff.rs
core/src/gw2_data/: cache.rs  equipment.rs  glider.rs  import.rs  mod.rs  outfit.rs  retry.rs
core/src/models/: error.rs  mod.rs  skin.rs  template.rs  wardrobe_template.rs
core/tests/: filter_travel_template.rs  filter_wardrobe_template.rs  merge_travel_template.rs  merge_wardrobe_template.rs  parse_chatlink.rs  parse_travel_template.rs  parse_wardrobe_template.rs  resolve_travel_template.rs  resolve_wardrobe_template.rs
e2e/: Cargo.toml
e2e/src/: cli.rs  lib.rs
e2e/src/snapshots/: e2e__cli__read_peekaboo.snap  e2e__cli__read_skip_names_zizi.snap  e2e__cli__read_zizi_armor.snap
e2e/tests/: cli.rs
e2e/tests/snapshots/: cli__read_input_list.snap  cli__read_skip_names_travel_default.snap  cli__read_skip_names_travel_kaboom.snap  cli__read_skip_names_travel_kaboom_mounts.snap  cli__read_skip_names_travel_no_dyes.snap  cli__read_skip_names_travel_peekaboo.snap  cli__read_skip_names_travel_zizi.snap  cli__read_skip_names_wardrobe_peekaboo.snap  cli__read_skip_names_wardrobe_zizi_armor.snap  cli__read_travel_default.snap  cli__read_travel_empty.snap  cli__read_travel_kaboom.snap  cli__read_travel_kaboom_mounts.snap  cli__read_travel_no_dyes.snap  cli__read_travel_peekaboo.snap  cli__read_travel_zizi.snap  cli__read_wardrobe_empty.snap  cli__read_zizi.snap
fixtures/: Cargo.toml
fixtures/src/: lib.rs  travel.rs  wardrobe.rs
gw2fashionista-core/src/domain/: mod.rs
gw2fashionista-core/src/gw2_data/: outfit.rs  retry.rs
gw2fashionista-core/src/models/: skin.rs
gw2fashionista-core/tests/: filter_wardrobe_template.rs
python/: pyproject.toml
python/src/gw2fashionista/: __init__.py  api.py  filter.py  skins.py
python/src/gw2fashionista/cli/: __init__.py
python/src/gw2fashionista/enums/: skin.py
python/tests/: data.py
rust/: Cargo.toml
rust/gw2fashionista-cli/: Cargo.toml
rust/gw2fashionista-cli/src/: commands.rs  main.rs
rust/gw2fashionista-cli/src/commands/: args.rs  export.rs  merge.rs  mod.rs  read.rs  wardrobe_export.rs  wardrobe_filter.rs  wardrobe_merge.rs
rust/gw2fashionista-core/: Cargo.toml
rust/gw2fashionista-core/src/: domain.rs  hello.rs  lib.rs
rust/gw2fashionista-core/src/domain/: chatlink.rs  error.rs  fashion_template.rs  link_type.rs  mod.rs  skin_type.rs  skins.rs  wardrobe_template.rs
rust/gw2fashionista-core/src/domain/wardrobe_template/: mod.rs  slot.rs
rust/gw2fashionista-core/src/gw2_data/: cache.rs  equipment.rs  import.rs  mod.rs
rust/gw2fashionista-core/src/models/: error.rs  skin.rs  wardrobe_template.rs
rust/gw2fashionista-core/tests/: filter_wardrobe_template.rs  merge_wardrobe_template.rs  parse_chatlink.rs  resolve_wardrobe_template.rs
src/gw2fashion/: __init__.py  __main__.py  api.py  cache.py  chatlink.py  filter.py  skins.py  template.py
src/gw2fashion/cli/: __init__.py  commands.py  parser.py
src/gw2fashion/enums/: skin.py
src/gw2fashionista/: __main__.py  api.py  chatlink.py  template.py
src/gw2fashionista/cli/: commands.py  parser.py
src/gw2fashionista/enums/: chatlink.py
tests/: test_filter_fashion.py  test_merge_fashion.py  test_parse_fashion.py  test_resolve_names.py
