[package]
name = "gw2fashionista-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive", "env", "string"] }
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = ["tracing"] }
csv = "1.4.0"
env_logger = "0.11.10"
gw2fashionista-core = { version = "0.1.0", path = "../core", features = ["tracing"] }
linearize = "0.1.7"
log = "0.4.30"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
