[package]
name = "gw2fashionista-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
clap-verbosity-flag = "3.0.4"
env_logger = "0.11.10"
gw2fashionista-core = { version = "0.1.0", path = "../gw2fashionista-core" }
log = "0.4.30"
serde_json = "1.0.150"
