[package]
name = "gw2fashionista-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env", "string"] }
clap-verbosity-flag = "3.0.4"
csv = "1.4.0"
env_logger = "0.11.10"
gw2fashionista-core = { version = "0.1.0", path = "../gw2fashionista-core" }
log = "0.4.30"
once_cell = "1.21.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
strum = "0.28.0"
