[package]
name = "gw2fashionista-core"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bitflags = "2.12.1"
byteorder = "1.5.0"
gw2lib = { version = "3.0.2", features = ["blocking"] }
itertools = "0.14.0"
num_enum = "0.7.6"
once_cell = "1.21.4"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
